--- a/TestOTA.plist
+++ b/TestOTA.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://119.29.58.222/bigwar/201612271055bigwar.ipa</string>
+                    <string>http://119.29.58.222/bigwar/201612271055bigwar.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
