--- a/bigwar.plist
+++ b/bigwar.plist
@@ -11,7 +11,7 @@
                         <key>kind</key>
                         <string>software-package</string>
                         <key>url</key>
-                        <string>http://119.29.79.55/bigwar/201612271055bigwar.ipa</string>
+                        <string>http://119.29.79.55/bigwar/bigwar.ipa</string>
                     </dict>
 					<dict>
                         <key>kind</key>
